# typed-redis

./: .gitignore  README.md  pyproject.toml
scripts/: pub.py  sub.py
src/: channels.py  manager.py  models.py
