[project]
name = "typed-redis"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Mani Mozaffar", email = "mani.mozaffar@gmail.com" }]
dependencies = [
    "redis>=5.0.4",
    "pydantic>=2.7.1",
    "aioclock>=0.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
